# code-agent-workbench

./: .gitignore  ARCHITECTURE.md  README.md  TODOS.md  package.json  pnpm-lock.yaml  team.yaml  workflow.yaml
.cursor/rules/: context-efficiency.mdc
.github/workflows/: release.yml
apps/consult/: index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
apps/desktop/: index.html  package.json  uno.config.ts  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: develop.md
docs/plans/: 2026-04-03-code-agent-v1.md
docs/specs/: 2026-04-03-code-agent-design.md
scripts/: agent-socks5-patch.cjs  archive.sh  gitlab-mr.sh  verify.sh
skills/: archive.md  design.md  e2e.md  feishu-requirement.md  integration.md  mr.md  plan.md  review.md  t1-dev.md  test-spec.md  verify.md
skills/feishu-branch-link/: SKILL.md  skill.json
skills/frontend/: brainstorming.md  codex-cross-review-dev.md  codex-cross-review-planning.md  create-branch.md  design-draft.md  gray-area.md  integration.md  repo-scan.md  req-collect.md  self-test.md  spec-create.md  task-breakdown.md  tdd-dev.md
tools/: inspect-logs.sh  query-history.sh
tools/gate-status/: README.md  run.mjs
tools/history-query/: README.md
tools/inspect-logs/: README.md
tools/openspec-query/: README.md  run.mjs
tools/phase-signal/: README.md  run.mjs
tools/repo-info/: README.md  run.sh
workflows/: workflow-template.yaml
(+79 files in other folders)
